<resources>
    <string name="app_name">StoreZ</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_recent_activity">Recent Activity</string>
    <string name="title_basket">Basket</string>
    <string name="title_list">List</string>
    <string name="basket_code_000">Basket Code #000</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="checkout">Checkout</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="current_store">Current Store</string>
    <string name="hello">Hello</string>
    <string name="done">Done</string>
    <string name="default_decimal">0.00</string>
    <string name="title_budget">Set Budget</string>
    <string name="title_join_room">Join Room</string>
    <string name="default_basket_code">0000</string>
    <string name="image_of_product">Image of product</string>
    <string name="product_name">Product name</string>
    <string name="product_price">$2.99</string>
    <string name="test_for_glide_loading">Test for glide loading</string>
</resources>